--- a/index.html
+++ b/index.html
@@ -344,38 +344,47 @@ nextBtn.onclick = ()=>{
 };
 
 // PHOTO capture (file input method)
-photoBtn.addEventListener('click', () => capturePhoto());
-retakeBtn.addEventListener('click', () => capturePhoto());
+// create a persistent hidden file input
+let photoInput = document.createElement('input');
+photoInput.type = 'file';
+photoInput.accept = 'image/*';
+photoInput.capture = 'environment';
+photoInput.style.display = 'none';
+document.body.appendChild(photoInput);
 
-function capturePhoto() {
-  const input = document.createElement('input');
-  input.type = 'file';
-  input.accept = 'image/*';
-  input.capture = 'environment';
+photoInput.addEventListener('change', async () => {
+  const file = photoInput.files[0];
+  if (!file) return;
 
-  input.onchange = async () => {
-    const file = input.files[0];
-    if (!file) return;
+  // Wait a tick to ensure the file is fully available
+  await new Promise(resolve => setTimeout(resolve, 50));
 
-    // Add a small delay to ensure the image data is fully available
-    await new Promise(resolve => setTimeout(resolve, 1000));
+  photoBlob = file;
 
-    photoBlob = file;
-    const reader = new FileReader();
-
-    reader.onload = (e) => {
-      photoPreview.src = e.target.result;
-      photoPreview.style.display = 'block';
-      retakeBtn.style.display = 'inline-block';
-      status2.textContent = 'Photo ready!';
-      submitBtn.disabled = false;
-    };
-
-    reader.readAsDataURL(file);
+  // read the file
+  const reader = new FileReader();
+  reader.onload = (e) => {
+    photoPreview.src = e.target.result;
+    photoPreview.style.display = 'block';
+    retakeBtn.style.display = 'inline-block';
+    status2.textContent = 'Photo ready!';
+    submitBtn.disabled = false;
   };
+  reader.readAsDataURL(file);
 
-  input.click();
+  // reset input for next use
+  photoInput.value = '';
+});
+
+// trigger the camera
+function capturePhoto() {
+  photoInput.click();
 }
+
+// attach to buttons
+photoBtn.addEventListener('click', capturePhoto);
+retakeBtn.addEventListener('click', capturePhoto);
+
 
 
 function checkSubmitReady() {
